discussion/kv_engine/161947/161947_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48399: Move shard calculation from workload.cc to ep_engine.cc

In preparation for a future change in which we will read the shard
count for magma buckets from a file.

Change-Id: I6561513978ca1467f42994be734eff1e46674de1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-09-21 09:49:08.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-21 09:53:41.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40178/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40178/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14507/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14507/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14254/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14254/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13397/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13397/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22520/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22520/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15013/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15013/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2280/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2311/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2311/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12639/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/workload.h:35:9: error: use of undeclared identifier "Expects" [clang-diagnostic-error]
        Expects(numShards != 0);
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12639/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/workload.h:35:9:
error: use of undeclared identifier "Expects" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12639/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11430/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
